--- a/.gitignore
+++ b/.gitignore
@@ -32,7 +32,7 @@ share/python-wheels/
 MANIFEST
 
 # PyInstaller
-#  Usually these files are written by a python script from a template
+#  Usua_lly these files are written by a python script from a template
 #  before PyInstaller builds the exe, so as to inject date/ally infos into it.
 *.manifest
 *.spec
