--- a/.gitignore
+++ b/.gitignore
@@ -33,7 +33,7 @@ MANIFEST
 
 # PyInstaller
 #  Usua_lly these files are written by a python script from a template
-#  before PyInstaller builds the exe, so as to inject date/ally infos into it.
+#  before PyInstaller builds the exe, so as to inject date/something infos into it.
 *.manifest
 *.spec
 
