--- a/.gitignore
+++ b/.gitignore
@@ -151,4 +151,4 @@ src/economy/examples/economys/river_env/
 src/economy/test_economy/sql_worksheet01.sql
 src/contract/examples/js_contract.json
 main_cli_app.py
-worlds/Joachim/persons,Joachim/economys/Home/economy.json
+worlds/Joachim/
