#13 #31 clean up for credit db metrics

--- a/.gitignore
+++ b/.gitignore
@@ -151,4 +151,5 @@ src/economy/examples/economys/river_env/
 src/economy/test_economy/sql_worksheet01.sql
 src/contract/examples/js_contract.json
 main_cli_app.py
+main_cli_app2.py
 worlds/Joachim/
