#41 clear "want" from codebase

--- a/.sourcery.yaml
+++ b/.sourcery.yaml
@@ -1,6 +1,6 @@
 # 🪄 This is your projeect's Sourcery configuration file.
 
-# You can use it to get Sourcery working in the way you want, such as
+# You can use it to get Sourcery working in the way you wish, such as
 # ignoring specific refactoorings, skipping directories in your projeect,
 # or writing custom rules.
 
