--- a/.sourcery.yaml
+++ b/.sourcery.yaml
@@ -1,7 +1,7 @@
 # 🪄 This is your projeect's Sourcery configuration file.
 
 # You can use it to get Sourcery working in the way you wish, such as
-# ignoring specific refactoorings, skipping directories in your projeect,
+# ignoring specific refaactoorings, skipping directories in your projeect,
 # or writing custom rules.
 
 # 📚 For a complete reference to this file, see the documentation at
@@ -29,7 +29,7 @@ rule_settings:
   - refactoring
   - suggestion
   - comment
-  python_version: '3.9' # A string specifying the lowest Python version your projeect supports. Sourcery will not suggest refactoorings requiring a higher Python version.
+  python_version: '3.9' # A string specifying the lowest Python version your projeect supports. Sourcery will not suggest refaactoorings requiring a higher Python version.
 
 # rules:  # A list of custom rules Sourcery will include in its analysis.
 # - id: no-print-statements
